# 2025-NIEDU-AI

./: .dockerignore  .gitignore  Docker1.txt  Dockerfile  README.md  architecture.md  e -i HEAD~7  lang_graph.md  pyproject.toml  requirements.deploy.txt  requirements.txt  trigger.txt
.github/workflows/: deploy.yml
copy/: converter.py
data/backup/: economy_2025-11-03.json  economy_2025-11-06.json  economy_2025-11-16.json  economy_2025-11-17.json  economy_2025-11-24.json  economy_2025-12-26.json  economy_2026-01-11.json  politics_2025-11-03.json  politics_2025-11-06.json  politics_2025-11-16.json  politics_2025-11-17.json  politics_2025-11-24.json  politics_2025-12-10.json  politics_2025-12-26.json  politics_2026-01-11.json  society_2025-11-03.json  society_2025-11-06.json  society_2025-11-16.json  society_2025-11-17.json  society_2025-11-24.json  society_2025-12-03.json  society_2025-12-26.json  society_2026-01-11.json  tech_2025-11-03.json  world_2025-11-03.json  world_2025-11-06.json  world_2025-11-16.json  world_2025-11-17.json  world_2025-11-24.json  world_2025-12-09.json  world_2025-12-26.json  world_2026-01-11.json
data/course_db/: economy_2025-11-03.json  economy_2025-11-16.json  economy_2025-11-17.json  economy_2025-11-24.json  economy_2025-12-26.json  economy_2026-01-11.json  politics_2025-11-03.json  politics_2025-11-16.json  politics_2025-11-17.json  politics_2025-11-24.json  politics_2025-12-26.json  politics_2026-01-11.json  society_2025-11-03.json  society_2025-11-16.json  society_2025-11-17.json  society_2025-11-24.json  society_2025-12-26.json  society_2026-01-11.json  world_2025-11-03.json  world_2025-11-16.json  world_2025-11-17.json  world_2025-11-24.json  world_2025-12-26.json  world_2026-01-11.json
data/quiz/: economy_1_1_ARTICLE_READING_E_2026-01-11.json  economy_1_1_ARTICLE_READING_I_2025-11-06.json  economy_1_1_ARTICLE_READING_I_2025-11-24.json  economy_1_1_ARTICLE_READING_I_2025-12-26.json  economy_1_1_CURRENT_AFFAIRS_N_2025-11-06.json  economy_1_1_CURRENT_AFFAIRS_N_2025-11-24.json  economy_1_1_CURRENT_AFFAIRS_N_2025-12-26.json  economy_1_1_CURRENT_AFFAIRS_N_2026-01-11.json  economy_1_1_MULTIPLE_CHOICE_I_2025-11-06.json  economy_1_1_MULTIPLE_CHOICE_I_2025-11-24.json  economy_1_1_MULTIPLE_CHOICE_I_2025-12-26.json  economy_1_1_MULTIPLE_CHOICE_I_2026-01-11.json  economy_1_1_MULTIPLE_CHOICE_N_2025-11-06.json  economy_1_1_MULTIPLE_CHOICE_N_2025-11-24.json  economy_1_1_MULTIPLE_CHOICE_N_2025-12-26.json  economy_1_1_MULTIPLE_CHOICE_N_2026-01-11.json  economy_1_1_OX_QUIZ_N_2025-11-06.json  economy_1_1_OX_QUIZ_N_2025-11-24.json  economy_1_1_OX_QUIZ_N_2025-12-26.json  economy_1_1_OX_QUIZ_N_2026-01-11.json  economy_1_1_SENTENCE_COMPLETION_E_2025-11-06.json  economy_1_1_SENTENCE_COMPLETION_E_2025-11-24.json  economy_1_1_SENTENCE_COMPLETION_E_2025-12-26.json  economy_1_1_SENTENCE_COMPLETION_E_2026-01-11.json  economy_1_1_SESSION_REFLECTION_E_2025-11-06.json  economy_1_1_SESSION_REFLECTION_E_2025-11-24.json  economy_1_1_SESSION_REFLECTION_E_2025-12-26.json  economy_1_1_SESSION_REFLECTION_E_2026-01-11.json  economy_1_1_SESSION_REFLECTION_I_2025-11-06.json  economy_1_1_SESSION_REFLECTION_I_2025-11-24.json  economy_1_1_SESSION_REFLECTION_I_2025-12-26.json  economy_1_1_SESSION_REFLECTION_I_2026-01-11.json  economy_1_1_SHORT_ANSWER_E_2025-11-06.json  economy_1_1_SHORT_ANSWER_E_2025-11-24.json  (+414 more)
docs/: structure.txt
notebooks/: 01_rag_stage.ipynb  02_content_stage_.ipynb
src/: .gitignore
src/api/: ai_main.py  main copy.py  (+1 more)
(+123 files in other folders)
