[tool.poetry]
name = "langchain-kr"
version = "0.1.1"
description = "Ultimate LangChain Tutorial written in Korean by TeddyNote."
authors = ["teddy <teddylee777@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

# === 실제 서비스(배포 환경) ===
[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# --- Core ---
openai = "1.61.1"
python-dotenv = "1.*"
chromadb = "0.*"
pydantic = "2.11.5"
pandas = "2.*"
tqdm = "^4.67.1"

# --- LangChain 최소 핵심 ---
langchain-core = "0.*"
langchain-community = "0.*"
langchain-openai = "0.*"

# --- ML 핵심 ---
sentence-transformers = "3.0.1"
huggingface-hub = "0.*"
tiktoken = "0.*"

# === 개발·분석·테스트 전용(dev) ===
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "1.*"

# --- 대용량 개발용 패키지 ---
transformers = "4.46.2"
faiss-cpu = "1.*"
fastembed = "^0.7.3"
unstructured = {version = "0.*", extras = ["all-docs"]}
pymupdf = "1.*"
pymupdf4llm = "0.*"
pdfplumber = "0.*"
pypdf = "4.*"
streamlit = "1.*"
autogen = "^0.9.9"
ragas = "0.*"
neo4j = "^5.28.2"
pinecone = "5.*"
pymilvus = "2.*"
langgraph = "0.*"

# --- 분석 / 시각화 ---
jupyter = "1.*"
notebook = "7.*"
matplotlib = "3.*"
seaborn = "0.*"
nbstripout = "^0.8.1"

# --- 기타 유틸 ---
tenacity = "8.*"
rich = "^14.1.0"
keybert = "0.8.5"
beautifulsoup4 = "^4.13.5"
grandalf = "0.*"
rouge-score = "0.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"